--- a/test/creators.html
+++ b/test/creators.html
@@ -240,8 +240,8 @@
       document.getElementById("mamif").innerHTML = "Animaux <img width='20px' src='../icons/round_keyboard_arrow_down_black_18dp.png'>";
       document.getElementById("gamertime").innerHTML = "A vous de jouer <img width='20px' src='../icons/round_keyboard_arrow_down_black_18dp.png'>";
       document.getElementById("whoru").innerHTML = "Qui sommes-nous <img width='20px' src='../icons/round_keyboard_arrow_down_black_18dp.png'>";  
-      document.getElementById("Footer").style.bottom ="27px";
-      document.getElementById("allrights").style.bottom ="0";
+      // document.getElementById("Footer").style.bottom ="27px";
+      // document.getElementById("allrights").style.bottom ="0";
     }
     function leaveanimal()
     { 
