--- a/test/index.html
+++ b/test/index.html
@@ -25,7 +25,7 @@
               <li><button id = "anim_sea">Animaux maritimes</button></li>
             </ul>
           </li>
-          <li id = "drop2" class = "dropdown"><a><span id = "gamertime">A vous de jouer</span></a></li>
+          <li id = "drop2" class = "dropdown"><button id = "gamertime" onclick = "location.href='test.html'">A vous de jouer</button></li>
           <li id = "drop3" class = "dropdown"><a href = "creators.html" tittle = "Me contacter"><span id = "whoru">Qui sommes-nous</span></a></li>
         </ul>
       <!-- </center> -->
