--- a/test/StarWarsI.html
+++ b/test/StarWarsI.html
@@ -166,7 +166,7 @@
   })
   function getRepublic()
   {
-    fetch('')
+    fetch('https://my-json-server.typicode.com/MasterJediKnight/animals-starwars')
     .then(response => response.json)
     .then(function (data)
     {
