--- a/test/animals.html
+++ b/test/animals.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width">
   <meta charset="utf-8">
   <link rel="stylesheet" href="ll.css" type="text/css">
-  <link rel="shortcut icon" type="image/ico" href="../icons/Darthvader.png">
+  <link rel="shortcut icon" type="image/ico" href="../icons/darthvader.png">
 </head>
 
 <body>
@@ -20,7 +20,7 @@
             <li><a href="https://myefrei.fr">Myefrei</a></li>
           </ul>
         </li>
-        <li id="drop1" class="dropdown"><button id="SW">Star Wars</button>
+        <li id="drop1" class="dropdown"><button id="sw">Star Wars</button>
           <ul id="drop1_1" class="dropdown-content">
             <span>First Trilogy</span>
             <li><a href="StarWarsI.html">Star Wars I</a></li>
@@ -46,50 +46,50 @@
     </nav>
 
 
-    <div id="Maritime">
+    <div id="maritime">
 
       <li class="animal">Animaux De La Mer</li>
       <li>Le plus rapide : Le Poisson Voilier allant jusqu’à 110km/h. Il est de la même espèce que l’Espada. Son nom
         vient de sa grande nageoire en forme de voile.</li>
 
-      <img id="myImg" onclick="showImg(this)" src="../Images/Animals/Poisson Voilier.jpg"
+      <img id="myImg" onclick="showImg(this)" src="../images/animals/poisson voilier.jpg"
         style="width:100%;max-width:300px">
 
       <li>Le plus dangereux : Le Grand Requin Blanc, une taille de 6m de longueur, chasse généralement des tortues,
         thons et crétacés. Chasse le sang. Cette espèce est menacée par la surpêche et par la pollution.</li>
 
 
-      <img id="myImg" onclick="showImg(this)" src="../Images/Animals/Grand Requin Blanc.jpg"
+      <img id="myImg" onclick="showImg(this)" src="../images/animals/grand requin blanc.jpg"
         style="width:100%;max-width:300px">
 
       <li>Le favori : Le dauphin ; il est intelligent et capable de communiquer par ultrason. Il ressemble à un requin
         mais semble plus apprécié et plus gentil.</li>
 
-      <img id="myImg" onclick="showImg(this)" src="../Images/Animals/Dauphin.jpg" style="width:100%;max-width:300px">
+      <img id="myImg" onclick="showImg(this)" src="../images/animals/dauphin.jpg" style="width:100%;max-width:300px">
     </div>
 
 
-    <div id="Terrestre">
+    <div id="terrestre">
       <li class="animal">Animaux Sur Terre</li>
       <li>Le plus rapide : Le Guépard, il peut aller jusqu’à environ 120km/h lors de ses chasses, il peut courir jusqu’à
         en mourir (mais sa vitesse diminue petit à petit). C’est un félin sauvage qui chasse généralement par groupe de
         2 ou 3. Il ressemble à un léopard avec des larmes noires.</li>
       <!-- <div>    -->
-      <img id="myImg" onclick="showImg(this)" src="../Images/Animals/Guepard.jpg" alt="Guepard"
+      <img id="myImg" onclick="showImg(this)" src="../images/animals/guepard.jpg" alt="Guepard"
         style="width:100%;max-width:300px">
       <!-- </div> -->
 
       <li>Le plus dangereux : Le Cobra Royal, il a un des venins les plus dangereux du monde. Ses morsures sont
         mortelles, il vaut mieux éviter de se faire mordre. Il a une sorte de cape.</li>
 
-      <img id="myImg" onclick="showImg(this)" src="../Images/Animals/Cobra Royal.jpg" alt="Cobra Royal"
+      <img id="myImg" onclick="showImg(this)" src="../images/animals/cobra royal.jpg" alt="Cobra Royal"
         style="width:100%;max-width:300px">
 
       <li>Le favori : Le Loup, c’est un canidé connu aussi comme le cousin du chien. Il fascine les humains qui le
         mettent dans leurs mythes, légendes et qui s’en inspirent même dans l’art. Ils vivent en meute et se
         transforment les soirs de pleine lune (restez chez vous).</li>
 
-      <img id="myImg" onclick="showImg(this)" src="../Images/Animals/Loup.jpg" style="width:100%;max-width:300px">
+      <img id="myImg" onclick="showImg(this)" src="../images/animals/loup.jpg" style="width:100%;max-width:300px">
 
     </div>
     <!-- <div id="myModal" class="modal">
@@ -98,24 +98,23 @@
               <div id="caption"></div>
         </div>   -->
 
-    <div id="Celeste">
+    <div id="celeste">
       <li class="animal">Animaux Du Ciel</li>
 
       <li>Le plus rapide : Le Faucon Pèlerin est l’animal le plus rapide au monde, il peut faire des descentes en piqué
         lors de ses chasse jusqu’à 390km/h. Il a des yeux perçants et voit très bien de loin</li>
 
-      <img id="myImg" onclick="showImg(this)" src="../Images/Animals/Faucon Pelerin.jpg" alt="Faucon Pélerin"
-        style="width:100%;max-width:300px">
+      <img id="myImg" onclick="showImg(this)" src="../images/animals/faucon pelerin.jpg" alt="Faucon Pélerin" style="width:100%;max-width:300px">
 
       <li>Le plus dangereux : Le Moustique est la cause de plus de 725000 morts par an, il est à l’origine d’un grand
         nombre d’épidémies et ne sert à rien à pas à causer des catastrophes.</li>
 
-      <img id="myImg" onclick="showImg(this)" src="../Images/Animals/Moustique.jpg" style="width:100%;max-width:300px">
+      <img id="myImg" onclick="showImg(this)" src="../images/animals/moustique.jpg" style="width:100%;max-width:300px">
 
       <li>Le favori : Le Condor est un des oiseaux les plus majestueux, connu comme étant le plus grand oiseau volant du
         monde avec plus de 3m de longueur, il pèse de 7.5 à 15kg.</li>
 
-      <img id="myImg" onclick="showImg(this)" src="../Images/Animals/Condor.jpg" style="width:100%;max-width:300px">
+      <img id="myImg" onclick="showImg(this)" src="../images/animals/condor.jpg" style="width:100%;max-width:300px">
     </div>
     <div height="100%" id="myModal" class="modal" onclick="document.getElementById('myModal').style.display='none'">
       <img class="modal-content" id="img01">
@@ -159,7 +158,7 @@
       document.getElementById("acc").innerHTML = "Accueil <img width='20px' src='../icons/round_keyboard_arrow_left_black_18dp.png'>";
     }
   })
-  let b_msw = document.getElementById("SW");
+  let b_msw = document.getElementById("sw");
   let drmsw = document.getElementById("drop1_1");
   b_msw.addEventListener("click", () => {
     if (getComputedStyle(drmsw).display != "none") {
@@ -170,11 +169,11 @@
       leaveall();
       document.getElementById("drop1_1").style.display = "block";
       document.getElementById("drop1_1").style.borderRadius = "10px";
-      document.getElementById("SW").innerHTML = "Star Wars <img width='20px' src='../icons/round_keyboard_arrow_left_black_18dp.png'>";
+      document.getElementById("sw").innerHTML = "Star Wars <img width='20px' src='../icons/round_keyboard_arrow_left_black_18dp.png'>";
     }
   })
   let b_anim_sky = document.getElementById("anim_sky");
-  let dr_anim_sky = document.getElementById("Celeste");
+  let dr_anim_sky = document.getElementById("celeste");
   b_anim_sky.addEventListener("click", () => {
     if (getComputedStyle(dr_anim_sky).display != "none") {
       // dr.style.display = "none";
@@ -182,14 +181,14 @@
     }
     else {
       leaveanimal();
-      document.getElementById('Celeste').style.display = 'block';
-      document.getElementById('Terrestre').style.display = 'none';
-      document.getElementById('Maritime').style.display = 'none';
+      document.getElementById('celeste').style.display = 'block';
+      document.getElementById('terrestre').style.display = 'none';
+      document.getElementById('maritime').style.display = 'none';
       leaveall();
     }
   })
   let b_anim_earth = document.getElementById("anim_earth");
-  let dr_anim_earth = document.getElementById("Terrestre");
+  let dr_anim_earth = document.getElementById("terrestre");
   b_anim_earth.addEventListener("click", () => {
     if (getComputedStyle(dr_anim_earth).display != "none") {
       // dr.style.display = "none";
@@ -199,12 +198,12 @@
       leaveanimal();
       document.getElementById("Footer").style.bottom = "27px";
       document.getElementById("allrights").style.bottom = "0";
-      document.getElementById('Terrestre').style.display = 'block';
+      document.getElementById('terrestre').style.display = 'block';
       leaveall();
     }
   })
   let b_anim_sea = document.getElementById("anim_sea");
-  let dr_anim_sea = document.getElementById("Maritime");
+  let dr_anim_sea = document.getElementById("maritime");
   b_anim_sea.addEventListener("click", () => {
     if (getComputedStyle(dr_anim_sea).display != "none") {
       // dr.style.display = "none";
@@ -215,7 +214,7 @@
       leaveanimal();
       document.getElementById("Footer").style.bottom = "27px";
       document.getElementById("allrights").style.bottom = "0";
-      document.getElementById('Maritime').style.display = 'block';
+      document.getElementById('maritime').style.display = 'block';
       leaveall();
     }
   })
@@ -232,14 +231,14 @@
   //Menu drop 2
   function mouseEnter1() {
     leaveall();
-    document.getElementById("SW").innerHTML = "Animaux <img width='20px' src='../icons/round_keyboard_arrow_left_black_18dp.png'>";
+    document.getElementById("sw").innerHTML = "Animaux <img width='20px' src='../icons/round_keyboard_arrow_left_black_18dp.png'>";
     document.getElementById("drop1_1").style.display = "block";
     document.getElementById("drop1_1").style.borderRadius = "10px";
   }
   function mouseLeave1() {
     leaveall();
 
-    document.getElementById("SW").innerHTML = "Animaux <img width='20px' src='../icons/round_keyboard_arrow_down_black_18dp.png'>";
+    document.getElementById("sw").innerHTML = "Animaux <img width='20px' src='../icons/round_keyboard_arrow_down_black_18dp.png'>";
   }
   function mouseEnter2() {
     leaveall();
@@ -286,7 +285,7 @@
     document.getElementById("drop0_1").style.display = "none";
     document.getElementById("drop1_1").style.display = "none";
     document.getElementById("acc").innerHTML = "Accueil <img width='20px' src='../icons/round_keyboard_arrow_down_black_18dp.png'>";
-    document.getElementById("SW").innerHTML = "Star Wars <img width='20px' src='../icons/round_keyboard_arrow_down_black_18dp.png'>";
+    document.getElementById("sw").innerHTML = "Star Wars <img width='20px' src='../icons/round_keyboard_arrow_down_black_18dp.png'>";
     document.getElementById("mamif").innerHTML = "Animaux <img width='20px' src='../icons/round_keyboard_arrow_down_black_18dp.png'>";
     document.getElementById("gamertime").innerHTML = "A vous de jouer <img width='20px' src='../icons/round_keyboard_arrow_down_black_18dp.png'>";
     document.getElementById("whoru").innerHTML = "Qui sommes-nous <img width='20px' src='../icons/round_keyboard_arrow_down_black_18dp.png'>";
@@ -294,9 +293,9 @@
     document.getElementById("allrights").style.bottom = "0";
   }
   function leaveanimal() {
-    document.getElementById('Celeste').style.display = 'none';
-    document.getElementById('Terrestre').style.display = 'none';
-    document.getElementById('Maritime').style.display = 'none';
+    document.getElementById('celeste').style.display = 'none';
+    document.getElementById('terrestre').style.display = 'none';
+    document.getElementById('maritime').style.display = 'none';
   }
   window.onload = leaveall();
   window.onload = leaveanimal();
