--- a/test/animals.html
+++ b/test/animals.html
@@ -23,7 +23,7 @@
         <li id="drop1" class="dropdown"><button id="sw">Star Wars</button>
           <ul id="drop1_1" class="dropdown-content">
             <span>First Trilogy</span>
-            <li><a href="StarWarsI.html">Star Wars I</a></li>
+            <li><a href="starwarsi.html">Star Wars I</a></li>
             <li><a href="https://myefrei.fr">Myefrei</a></li>
           </ul>
         </li>
