--- a/test/animals.html
+++ b/test/animals.html
@@ -92,11 +92,7 @@
       <img id="myImg" onclick="showImg(this)" src="../images/animals/loup.jpg" style="width:100%;max-width:300px">
 
     </div>
-    <!-- <div id="myModal" class="modal">
-              <span class="close">&times;</span>
-              <img class="modal-content" id="img01">
-              <div id="caption"></div>
-        </div>   -->
+
 
     <div id="celeste">
       <li class="animal">Animaux Du Ciel</li>
@@ -139,6 +135,7 @@
 <script type="text/javascript">
 
   document.getElementById("drop0").addEventListener("mouseleave", mouseLeave0);
+  document.getElementById("drop1").addEventListener("mouseleave", mouseLeave1);
   document.getElementById("drop3").addEventListener("onclick", mouseEnter2);
   document.getElementById("drop3").addEventListener("mouseleave", mouseLeave2);
   document.getElementById("drop4").addEventListener("onclick", mouseEnter3);
