--- a/test/animals.html
+++ b/test/animals.html
@@ -231,35 +231,42 @@
     document.getElementById("sw").innerHTML = "Animaux <img width='20px' src='../icons/round_keyboard_arrow_left_black_18dp.png'>";
     document.getElementById("drop1_1").style.display = "block";
     document.getElementById("drop1_1").style.borderRadius = "10px";
+    replace_footer();
   }
   function mouseLeave1() {
     leaveall();
-
     document.getElementById("sw").innerHTML = "Animaux <img width='20px' src='../icons/round_keyboard_arrow_down_black_18dp.png'>";
+    replace_footer();
   }
   function mouseEnter2() {
     leaveall();
     document.getElementById("mamif").innerHTML = "Animaux<img width='20px' src='../icons/round_keyboard_arrow_left_black_18dp.png'>";
+    replace_footer();
   }
   function mouseLeave2() {
     leaveall();
     document.getElementById("mammif").innerHTML = "Animaux <img width='20px' src='../icons/round_keyboard_arrow_down_black_18dp.png'>";
+    replace_footer();
   }
   function mouseEnter3() {
     leaveall();
     document.getElementById("gamertime").innerHTML = "A vous de jouer <img width='20px' src='../icons/round_keyboard_arrow_left_black_18dp.png'>";
+    replace_footer();
   }
   function mouseLeave3() {
     leaveall();
     document.getElementById("gamertime").innerHTML = "A vous de jouer <img width='20px' src='../icons/round_keyboard_arrow_down_black_18dp.png'>";
+    replace_footer();
   }
   function mouseEnter4() {
     leaveall();
     document.getElementById("whoru").innerHTML = "Qui sommes-nous <img width='20px' src='../icons/round_keyboard_arrow_left_black_18dp.png'>";
+    replace_footer();
   }
   function mouseLeave4() {
     leaveall();
     document.getElementById("whoru").innerHTML = "Qui sommes-nous <img width='20px' src='../icons/round_keyboard_arrow_down_black_18dp.png'>";
+    replace_footer();
   }
   /******/
   //ZOOMS
@@ -289,7 +296,14 @@
     document.getElementById("Footer").style.bottom = "27px";
     document.getElementById("allrights").style.bottom = "0";
   }
-  function leaveanimal() {
+  function replace_footer()
+  {
+    document.getElementById("Footer").style.bottom = "27px";
+    document.getElementById("allrights").style.bottom = "0";
+    document.getElementById("Footer").style.transition = "all 1s ease-out;";
+    document.getElementById("allrights").style.transition = "all 1s ease-out;";
+  }
+    function leaveanimal() {
     document.getElementById('celeste').style.display = 'none';
     document.getElementById('terrestre').style.display = 'none';
     document.getElementById('maritime').style.display = 'none';
