--- a/test/index.html
+++ b/test/index.html
@@ -148,6 +148,13 @@
     document.getElementById("Footer").style.bottom = "27px";
     document.getElementById("allrights").style.bottom = "0";
   }
+  function replace_footer()
+  {
+    document.getElementById("Footer").style.bottom = "27px";
+    document.getElementById("allrights").style.bottom = "0";
+    document.getElementById("Footer").style.transition = "all 1s ease-out;";
+    document.getElementById("allrights").style.transition = "all 1s ease-out;";
+  }
   window.onload = leaveall();
   </script>
   </html>
