--- a/test/animals.html
+++ b/test/animals.html
@@ -228,14 +228,14 @@
   //Menu drop 2
   function mouseEnter1() {
     leaveall();
-    document.getElementById("sw").innerHTML = "Animaux <img width='20px' src='../icons/round_keyboard_arrow_left_black_18dp.png'>";
+    document.getElementById("sw").innerHTML = "Star Wars <img width='20px' src='../icons/round_keyboard_arrow_left_black_18dp.png'>";
     document.getElementById("drop1_1").style.display = "block";
     document.getElementById("drop1_1").style.borderRadius = "10px";
     replace_footer();
   }
   function mouseLeave1() {
     leaveall();
-    document.getElementById("sw").innerHTML = "Animaux <img width='20px' src='../icons/round_keyboard_arrow_down_black_18dp.png'>";
+    document.getElementById("sw").innerHTML = "Star Wars <img width='20px' src='../icons/round_keyboard_arrow_down_black_18dp.png'>";
     replace_footer();
   }
   function mouseEnter2() {
