--- a/test/index.html
+++ b/test/index.html
@@ -20,8 +20,9 @@
           </li>
           <li id="drop1" class="dropdown"><button id="sw">Star Wars</button>
             <ul id="drop1_1" class="dropdown-content">
-              <span>First Trilogy</span>
+              <span>Prequel Trilogy</span>
               <li><a href="starwarsi.html">Star Wars I</a></li>
+              <span>First Trilogy</span>
               <li><a href="https://myefrei.fr">Myefrei</a></li>
             </ul>
           </li>
