--- a/test/starwarsi.html
+++ b/test/starwarsi.html
@@ -19,10 +19,11 @@
             </ul>
           </li>
           <li id="drop1" class = "dropdown"><button id="sw">Star Wars</button>
-            <ul id = "drop1_1" class="dropdown-content">
+            <ul id="drop1_1" class="dropdown-content">
+              <span>Prequel Trilogy</span>
+              <li><a href="starwarsi.html">Star Wars I</a></li>
               <span>First Trilogy</span>
-              <li><a href = "starwarsi.html">Star Wars I</a></li>
-              <li><a href = "https://myefrei.fr">Myefrei</a></li>
+              <li><a href="https://myefrei.fr">Myefrei</a></li>
             </ul>
           </li>
           <li id = "drop2" class = "dropdown"><button id = "mamif" onclick = "location.href='animals.html'">Animaux</button>
