--- a/test/starwarsi.html
+++ b/test/starwarsi.html
@@ -75,6 +75,10 @@
 
         </span>
       </section>
+
+      <section>
+        
+      </section>
     </div>
   </footer>
   <div id = "allrights">© Projet Web 2020 - David GORGETTE Vincent GABRIL </div>
