--- a/test/starwarsi.html
+++ b/test/starwarsi.html
@@ -37,7 +37,7 @@
 
         <nav>
           <ul><button id = "repbut">For the Republic</button></ul>
-          <ul><button id = "csi">Confédération des SI</button></ul>
+          <ul><button id = "csi">Fédération du Commerce</button></ul>
           <!-- <ul><button id = "sithb">Animaux célestes</button></ul> -->
         
         </nav>
@@ -77,7 +77,7 @@
       </section>
 
       <section>
-        
+
       </section>
     </div>
   </footer>
