--- a/test/index.html
+++ b/test/index.html
@@ -48,6 +48,10 @@
       </section>
     </div>
   </footer>
+    <img src="images/youtube icon.png" alt="herbe"> 
+    <img src="images/fb icon.png" alt="herbe">
+    <img src="images/twitter icon.png" alt="herbe">
+    <img src="images/discord icon.png" alt="herbe">
   <div id = "allrights">© Projet Web - David GORGETTE Vincent GABRIL </div>
   <script type = "text/javascript">
 
