--- a/test/index.html
+++ b/test/index.html
@@ -39,6 +39,12 @@
   </body>
   <footer id = "Footer">
     <div>
+       <section>
+        <img src="images/youtube icon.png" alt="herbe"> 
+       <img src="images/fb icon.png" alt="herbe">
+       <img src="images/twitter icon.png" alt="herbe">
+       <img src="images/discord icon.png" alt="herbe">
+        </section>
       <section>
        <img src = "../icons/baseline_info_footerb_18dp.png"><br/>
         <span><a href = "creators.html">Qui sommes-nous ?</a>
